--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.5",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
     "@tailwindcss/postcss": "^4.1.3",
+    "@types/three": "^0.175.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@cspell/eslint-plugin": "^8.18.1",
@@ -36,12 +41,12 @@
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass": "^1.86.3",
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1",
-    "vite": "^6.2.5"
+    "vite": "^6.2.5",
+    "vite-plugin-glsl": "^1.4.0"
   },
   "packageManager": "pnpm@10.8.0"
 }
