--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,6 +14,6 @@
     "checkJs": true,
     "outDir": "dist",
   },
-  "include": ["./*.ts", "./*.js", "./*.mjs"],
+  "include": ["./*.ts", "./*.tsx", "./*.js", "./*.jsx", "./*.mjs", "./*.mts"],
   "exclude": ["src", "node_modules"],
 }
