--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "pnpm build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "tsx scripts/gh-pages-deploy.mts"
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.5",
@@ -27,6 +27,7 @@
     "@eslint/js": "^9.24.0",
     "@types/eslint": "^9.6.1",
     "@types/eslint-config-prettier": "^6.11.3",
+    "@types/gh-pages": "^6.1.0",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
@@ -47,10 +48,12 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.3",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1",
     "vite": "^6.2.5",
-    "vite-plugin-glsl": "^1.4.0"
+    "vite-plugin-glsl": "^1.4.0",
+    "zx": "^8.5.0"
   },
   "packageManager": "pnpm@10.8.0"
 }
